[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fireworks/FireworksEditor.gd" type="Script" id=1]

[node name="Editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 262.0
margin_bottom = 720.0
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 1.43
custom_constants/separation = 30
alignment = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 562.0
margin_right = 262.0
margin_bottom = 720.0

[node name="OpenFolder" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 262.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Open Folder"

[node name="SaveAs" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 262.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Save as"

[node name="SaveButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 54.0
margin_right = 262.0
margin_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Save to disk"

[node name="ReturnSelectorButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 108.0
margin_right = 262.0
margin_bottom = 158.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Return to menu"

[node name="TextEdit" type="TextEdit" parent="Panel/HBoxContainer"]
margin_left = 266.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.52
text = "# see instructions at the right side
# let's start simple
fountain 0.2 color:1 size:1.0
fountain 0.8 color:1 size:1.0
wait 1000
rocket 0.5 arandom:0
wait 500
rocket 0.6 arandom:0 angle:1.0"
highlight_current_line = true
syntax_highlighting = true
highlight_all_occurrences = true
minimap_draw = true
caret_blink = true

[node name="Help" type="Button" parent="Panel/HBoxContainer/TextEdit"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Panel"]
visible = true
margin_left = 318.0
margin_top = 157.0
margin_right = 846.0
margin_bottom = 450.0
filters = PoolStringArray( "*.fw ; Firework scripts" )
current_dir = "res://addons/fireworks/fireworks_script"
current_file = "demo.fw"
current_path = "res://addons/fireworks/fireworks_script/demo.fw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
modulate = Color( 0.721569, 0.780392, 0.956863, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Popup"]
margin_left = -161.0
margin_top = -179.0
margin_right = 595.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
